# m3-loader

./: README.md
m3-loaders/: .gitignore  CMakeLists.txt
m3-loaders/docs/diagrams/: a5-cm3-ATF-boot-procedure.pu
m3-loaders/drivers/: CMakeLists.txt
m3-loaders/drivers/can/: sta_can.c
m3-loaders/drivers/ccc/: CMakeLists.txt  sta_ccc.c  sta_ccc.h  sta_ccc_helpers.c  sta_ccc_if.h  sta_ccc_osal.c  sta_ccc_osal.h  sta_ccc_plat.h  sta_hash.c  sta_move.c  sta_mpaes.c  sta_pka.c  sta_pka.h  sta_pka_ecc.c  sta_pka_ecdsa.c  sta_pka_rsa.c  sta_trng.c
m3-loaders/drivers/hsm/inc/: CSE_Constants.h  CSE_HAL.h  config.h
m3-loaders/drivers/hsm/ks_proxy/inc/: cmd_mailbox.h  ks_proxy.h  loadstore.h  lspayload.h  rpmx_common.h
m3-loaders/drivers/hsm/ks_proxy/src/: cmd_mailbox.c  ks_proxy.c  loadstore.c
m3-loaders/drivers/hsm/src/: CSE_HAL.c  CSE_cmd_param.c
m3-loaders/drivers/hsm/test/generic/inc/: menu_ext.h
m3-loaders/drivers/hsm/test/generic/src/: menu_ext.c
m3-loaders/drivers/jpegdec/source/: CMakeLists.txt
m3-loaders/drivers/jpegdec/source/inc/: jpegdecres.h  ppapi.h
m3-loaders/drivers/jpegdec/source/jpeg/: dwl.c  jpegdecres.c
m3-loaders/drivers/jpegdec/source/pp/: ppapi.c  ppinternal.c
m3-loaders/drivers/sta_fwlib/inc/: sdmmc.h  sta1385_ddr3_setting.h  sta_cam.h  sta_cot.h  sta_ddr.h  sta_ddr_sta1385_timing.h  sta_gpio.h  sta_lpddr2_sta1385_timing.h  sta_ltdc.h  sta_map.h  sta_nic_security.h  sta_pm.h  sta_rtc.h  sta_src.h  sta_tvdec.h  sta_type.h  sta_uart.h
m3-loaders/drivers/sta_fwlib/src/: CMakeLists.txt  sdmmc.c  sta1385_ddr3_ctl.c  sta1385_ddr3_setting.c  sta1385_lpddr2_ctl.c  sta1385_lpddr2_publ.c  sta1385_lpddr2_setting.c  sta1x95_ddr3_ctl.c  sta1x95_ddr3_pub.c  sta_a7.c  sta_acc.c  sta_adc.c  sta_cam.c  sta_cot.c  sta_ddr.c  sta_gpio.c  sta_lcd.c  sta_ltdc.c  sta_mbox.c  sta_mmci.c  sta_nand.c  sta_nic_security.c  sta_pm.c  sta_regmap.c  sta_regmap_firewall.c  sta_sqi.c  sta_src.c  sta_stm.c  sta_tvdec.c  sta_uart.c  sta_usb.c  sta_vip.c  sta_wdt.c  sta_wdt_a7.c
m3-loaders/early_audio/: early  emerald-firmware.X0.noheader  emerald-firmware.X1.noheader  emerald-firmware.Y0.noheader  emerald-firmware.Y1.noheader
m3-loaders/include/: FreeRTOSConfig.h  shared_data.h  sta_common.h  sta_image.h  trace.h  utils.h
m3-loaders/middleware/rpmsg/inc/: sta_rpmsg.h
m3-loaders/middleware/rpmsg/src/: MessageQCopy.c  sta_rpmsg.c
m3-loaders/platform/: sta1295_pinmux.h  sta1385_pinmux.h  sta_pinmux.c  sta_platform.c  sta_platform.h
m3-loaders/services/inc/: audiolib.h  sta_mm.h  sta_rpmsg_mm.h
m3-loaders/services/src/: CMakeLists.txt  ccc_tests_result.txt  sta_audio.c  sta_can_test.c  sta_ccc_test.c  sta_cli_cmd.c  sta_ddr_cli_cmd.c  sta_i2c_test.c  sta_ks.c  sta_mbox_test.c  sta_mm.c  sta_rpmsg_audio.c  sta_rpmsg_mm.c  sta_rvc_test.c  sta_splash_animation.c  sta_sqi_nor_test.c
m3-loaders/src/: CMakeLists.txt  init.c  m3_os.ld.E  m3_xl_uflashloader.ld.E  m3_xloader.ld.E  printf-stdarg.c  sta_car_radio.c  sta_common.c  sta_image.c  sta_m3_mini.c  sta_telematics.c  sta_xl_uflashloader.c  sta_xloader.c  startup.s  trace.c
m3-loaders/tools/ddr-config/: ADG_DDR3_config.ods  ADG_LPDDR2_config.ods
